# Explainable-Credit-Risk-Modeling-with-Alternative-Data-and-Local-LLMs

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  demo_runbook.md
scripts/: bootstrap.ps1  run_checks.ps1
src/credit_risk_altdata/: __init__.py  __main__.py  cli.py  config.py  logging.py
src/credit_risk_altdata/api/: app.py  dependencies.py  model_store.py  routes_artifacts.py  routes_explain.py  routes_health.py  routes_reports.py  routes_score.py  schemas.py  services.py
src/credit_risk_altdata/audit/: __init__.py  artifacts.py
src/credit_risk_altdata/data/: __init__.py  constants.py  download.py  loaders.py  raw_validation.py  reporting.py
src/credit_risk_altdata/explainability/: __init__.py  constants.py  lime_explainer.py  (+5 more)
tests/: conftest.py  test_smoke.py
tests/api/: test_api_endpoints.py
tests/audit/: test_artifact_verification.py
tests/cli/: test_cli_data_commands.py  test_cli_explainability_commands.py  test_cli_llm_reporting_commands.py  test_cli_modeling_commands.py  test_cli_tuning_commands.py
tests/data/: test_loaders.py  test_raw_validation.py
tests/explainability/: test_lime_explainer.py  test_payloads.py  test_reporting.py  test_selection.py  test_workflow.py
tests/features/: test_feature_builders.py  test_feature_pipeline.py
tests/llm/: test_llm_reporting_workflow.py  test_ollama_client.py  test_prompts_rendering.py
tests/modeling/: test_data_prep.py  test_metrics.py  test_phase5_calibration.py  test_phase5_evaluation_reporting.py  test_phase5_final_selection.py  test_phase5_tuning.py  test_training.py
(+34 files in other folders)
